--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -53,7 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\Editor\PlayerPrefsScript.cs" />
+     <Compile Include="Assets\Scripts\Editor\DeletePlayerPrefsScript.cs" />
  <Reference Include="UnityEditor.StandardEvents">
  <HintPath>D:/Documents/Unity Projects/GeoGunnerGame/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
  </Reference>
